Removed Templates Folder

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="static/css/style.css">
 
 </head>
 <body>
@@ -42,7 +42,7 @@
 
         <div class="swiper-wrapper">
 
-           <div class="swiper-slide slide" style="background: url('../static/images/earth.jpg') no-repeat;">
+           <div class="swiper-slide slide" style="background: url('static/images/earth.jpg') no-repeat;">
                 <div class="content">
                     <span>Software Engineer</span>
                     <h3>Welcome to my digital space</h3>
@@ -50,7 +50,7 @@
                 </div>
             </div>
 
-            <div class="swiper-slide slide" style="background: url('../static/images/woman.jpg') no-repeat;">
+            <div class="swiper-slide slide" style="background: url('static/images/woman.jpg') no-repeat;">
                 <div class="content">
                     <span>Java Developer</span>
                     <h3>Where ideas transform into reality</h3>
@@ -58,7 +58,7 @@
                 </div>
             </div>
 
-            <div class="swiper-slide slide" style="background: url('../static/images/home-bg.jpg') no-repeat;">
+            <div class="swiper-slide slide" style="background: url('static/images/home-bg.jpg') no-repeat;">
                 <div class="content">
                     <span>Front End Developer</span>
                     <h3>Let's build the future together</h3>
@@ -81,7 +81,7 @@
 <section class="about" id="about">
 
     <div class="image">
-        <img src="../static/images/photo.jpg" alt="">
+        <img src="static/images/photo.jpg" alt="">
     </div>
 
     <div class="content">
@@ -127,10 +127,10 @@
 
         <div class="box">
             <div class="image">
-                <img src="../static/images/Cloud.jpg" alt="">
+                <img src="static/images/Cloud.jpg" alt="">
             </div>
             <div class="content">
-                <img src="../static/images/icon-1.png" alt="">
+                <img src="static/images/icon-1.png" alt="">
                 <h3>Education</h3>
                 <p>Software Engineer | Java | PostgreSQL | BS Computer Science @ GSU</p>
                 <a href="#" class="btn">read more</a>
@@ -139,10 +139,10 @@
 
         <div class="box second">
             <div class="image">
-                <img src="../static/images/cc.png" alt="">
+                <img src="static/images/cc.png" alt="">
             </div>
             <div class="content">
-                <img src="../static/images/icon-2.png" alt="">
+                <img src="static/images/icon-2.png" alt="">
                 <h3>Job Experience</h3>
                 <p>Lanier Parking Solutions | Parking Supervisor</p>
                 <a href="#" class="btn">read more</a>
@@ -151,10 +151,10 @@
 
         <div class="box">
             <div class="image">
-                <img src="../static/images/banner.jpg" alt="">
+                <img src="static/images/banner.jpg" alt="">
             </div>
             <div class="content">
-                <img src="../static/images/icon-3.png" alt="">
+                <img src="static/images/icon-3.png" alt="">
                 <h3>Coursework Experience</h3>
                 <p>Data Structures | Design and Analysis of Algorithms | Cloud Computing</p>
                 <a href="#" class="btn">read more</a>
@@ -182,7 +182,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="../static/images/system.png" alt="">
+            <img src="static/images/system.png" alt="">
             <div class="content">
                 <span>Crud Application</span>
                 <h3>Review and Rating System</h3>
@@ -194,7 +194,7 @@
         </div>
 
         <div class="box">
-            <img src="../static/images/music.png" alt="">
+            <img src="static/images/music.png" alt="">
             <div class="content">
                 <span>Spotify API</span>
                 <h3>Euphonic</h3>
@@ -206,7 +206,7 @@
         </div>
 
         <div class="box">
-            <img src="../static/images/soon.jpg" alt="">
+            <img src="static/images/soon.jpg" alt="">
             <div class="content">
                 <span>Transaction Application</span>
                 <h3>Banking account</h3>
@@ -218,7 +218,7 @@
         </div>
 
         <div class="box">
-            <img src="../static/images/soon.jpg" alt="">
+            <img src="static/images/soon.jpg" alt="">
             <div class="content">
                 <span>Raspberry Pi Network</span>
                 <h3>Plant Life Expectancy Predictor</h3>
@@ -268,7 +268,7 @@
             <div class="swiper-slide slide">
                 <p>Cloud Computing is executed with precision and using the latest cloud technologies</p>
                 <div class="user">
-                    <img src="../static/images/pic-1.png" alt="">
+                    <img src="static/images/pic-1.png" alt="">
                     <div class="info">
                         <h3>Lipeng Wan</h3>
                         <span>Cloud Computing</span>
@@ -280,7 +280,7 @@
             <div class="swiper-slide slide">
                 <p>Techniques used in large scale scientific or technical software development</p>
                 <div class="user">
-                    <img src="../static/images/pic-2.png" alt="">
+                    <img src="static/images/pic-2.png" alt="">
                     <div class="info">
                         <h3>william gregory johnson</h3>
                         <span>software engineering</span>
@@ -292,7 +292,7 @@
             <div class="swiper-slide slide">
                 <p>a thorough understanding of the complexities</p>
                 <div class="user">
-                    <img src="../static/images/pic-3.png" alt="">
+                    <img src="static/images/pic-3.png" alt="">
                     <div class="info">
                         <h3>Murray Patterson</h3>
                         <span>artificial intelligence</span>
@@ -305,7 +305,7 @@
                 <p>outstanding ability to build a scalable and secure web application that leveraged the power of 
 the web.</p>
                 <div class="user">
-                    <img src="../static/images/Henry.jpeg" alt="">
+                    <img src="static/images/Henry.jpeg" alt="">
                     <div class="info">
                         <h3>Louis Henry</h3>
                         <span>Web Programming</span>
@@ -334,7 +334,7 @@ the web.</p>
 
             <div class="swiper-slide slide">
                 <div class="image">
-                    <img src="../static/images/program.jpg" alt="">
+                    <img src="static/images/program.jpg" alt="">
                 </div>
                 <div class="content">
                     <div class="link"> <a href="#">by william johnson</a> <span>|</span> <a href="#">software engineering</a> </div>
@@ -347,7 +347,7 @@ the web.</p>
             
             <div class="swiper-slide slide">
                 <div class="image">
-                    <img src="../static/images/story.jpg" alt="">
+                    <img src="static/images/story.jpg" alt="">
                 </div>
                 <div class="content">
                     <div class="link"> <a href="#">by william johnson</a> <span>|</span> <a href="#">software engineering</a> </div>
@@ -360,7 +360,7 @@ the web.</p>
 
             <div class="swiper-slide slide">
                 <div class="image">
-                    <img src="../static/images/plan.jpg" alt="">
+                    <img src="static/images/plan.jpg" alt="">
                 </div>
                 <div class="content">
                     <div class="link"> <a href="#">by william johnson</a> <span>|</span> <a href="#">software engineering</a> </div>
@@ -373,7 +373,7 @@ the web.</p>
 
             <div class="swiper-slide slide">
                 <div class="image">
-                    <img src="../static/images/diagram.jpg" alt="">
+                    <img src="static/images/diagram.jpg" alt="">
                 </div>
                 <div class="content">
                     <div class="link"> <a href="#">by william johnson</a> <span>|</span> <a href="#">software engineering</a> </div>
@@ -387,7 +387,7 @@ the web.</p>
 
             <div class="swiper-slide slide">
                 <div class="image">
-                    <img src="../static/images/api.jpg" alt="">
+                    <img src="static/images/api.jpg" alt="">
                 </div>
                 <div class="content">
                     <div class="link"> <a href="#">by william johnson</a> <span>|</span> <a href="#">software engineering</a> </div>
