Fixed Javascript Link

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ the web.</p>
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
 <!-- custom js file link  -->
-<script src="../static/js/script.js"></script>
+<script src="static/js/script.js"></script>
 
 </body>
 </html>
