--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <h3>Review and Rating System</h3>
                 <div class="share">
                     <a href="https://www.linkedin.com/in/pedro-silverio-95210220b/" target="_blank" class="fab fa-youtube"></a>
-                    <a href="https://github.com/Pedro101s" target="_blank" class="fab fa-github"></a>
+                    <a href="https://github.com/Pedro101s/Rating-System" target="_blank" class="fab fa-github"></a>
                 </div>
             </div>
         </div>
