Modifications On Experience, Github And Contact Information

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
             </div>
             <div class="content">
                 <img src="static/images/icon-2.png" alt="">
-                <h3>Job Experience</h3>
-                <p>Lanier Parking Solutions | Parking Supervisor</p>
+                <h3>Internship Experience</h3>
+                <p>Software Engineer @ OpenQQuantify</p>
                 <a href="#" class="btn">read more</a>
             </div>
         </div>
@@ -187,7 +187,7 @@
                 <span>Crud Application</span>
                 <h3>Review and Rating System</h3>
                 <div class="share">
-                    <a href="https://www.linkedin.com/in/pedro-silverio-95210220b/" target="_blank" class="fab fa-youtube"></a>
+                    <a href="https://www.linkedin.com/in/pedro-silverio-95210220b/" target="_blank" class="fab fa-linkedin"></a>
                     <a href="https://github.com/Pedro101s/Rating-System" target="_blank" class="fab fa-github"></a>
                 </div>
             </div>
@@ -199,8 +199,8 @@
                 <span>Spotify API</span>
                 <h3>Euphonic</h3>
                 <div class="share">
-                    <a href="https://www.linkedin.com/in/pedro-silverio-95210220b/" target="_blank" class="fab fa-youtube"></a>
-                    <a href="https://github.com/Pedro101s" target="_blank" class="fab fa-github"></a>
+                    <a href="https://www.linkedin.com/in/pedro-silverio-95210220b/" target="_blank" class="fab fa-linkedin"></a>
+                    <a href="https://github.com/Pedro101s/Euphonic" target="_blank" class="fab fa-github"></a>
                 </div>
             </div>
         </div>
@@ -211,7 +211,7 @@
                 <span>Transaction Application</span>
                 <h3>Banking account</h3>
                 <div class="share">
-                    <a href="https://www.linkedin.com/in/pedro-silverio-95210220b/" target="_blank" class="fab fa-youtube"></a>
+                    <a href="https://www.linkedin.com/in/pedro-silverio-95210220b/" target="_blank" class="fab fa-linkedin"></a>
                     <a href="https://github.com/Pedro101s" target="_blank" class="fab fa-github"></a>
                 </div>
             </div>
@@ -223,7 +223,7 @@
                 <span>Raspberry Pi Network</span>
                 <h3>Plant Life Expectancy Predictor</h3>
                 <div class="share">
-                    <a href="https://www.linkedin.com/in/pedro-silverio-95210220b/" target="_blank" class="fab fa-youtube"></a>
+                    <a href="https://www.linkedin.com/in/pedro-silverio-95210220b/" target="_blank" class="fab fa-linkedin"></a>
                     <a href="https://github.com/Pedro101s" target="_blank" class="fab fa-github"></a>
                 </div>
             </div>
@@ -438,8 +438,8 @@ the web.</p>
         <div class="box">
             <h3>Contact Information</h3>
             <p> <i class="fas fa-phone"></i> +770-864-8861 </p>
-            <p> <i class="fas fa-envelope"></i> psilverio1@student.gsu.edu </p>
             <p> <i class="fas fa-envelope"></i> psilveriocs@gmail.com </p>
+            <p> <i class="fas fa-envelope"></i> optmistic269@gmail.com </p>
             <p> <i class="fas fa-map"></i> Atlanta, Georgia - 30303 </p>
             <div class="share">
                 <a href="https://www.linkedin.com/in/pedro-silverio-95210220b/" target="_blank" class="fab fa-linkedin"></a>
